--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -7,7 +7,7 @@
     fxLayoutGap.xs="0">
 
   <div fxFlex="40">
-      <mat-card>
+      <mat-card *ngIf="dish">
           <mat-card-header>
             <mat-card-title>
               <h3>{{dish.name | uppercase}}</h3>
@@ -25,7 +25,7 @@
   </div>
 
   <div fxFlex="40">
-      <mat-list *ngIf="dish" fxFlex>    
+      <mat-list *ngIf="dish">    
         <h2 matLine> Comments </h2>
         <mat-list-item *ngFor="let comment of dish.comments">
            <h4 matLine>{{comment.comment}}</h4>
