--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -56,7 +56,7 @@
 
  
   <div fxFlex>
-    <mat-list>    
+    <mat-list *ngIf="leaders">    
       <h2 matLine>Corporate Leadership</h2>
       <mat-list-item *ngFor="let leader of leaders">
           <img matListAvatar src="{{leader.image}}" alt={{leader.name}}>
@@ -71,6 +71,10 @@
           </p>
         </mat-list-item>
     </mat-list>
+    <div [hidden]="leaders">
+      <mat-spinner></mat-spinner>
+      <h3>Loading . . . Please Wait</h3>
+    </div>
   </div>
- 
+  
 </div>
