--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -40,4 +40,10 @@
       </mat-list>
   </div>
 
+  <div [hidden]="dish">
+    <mat-spinner></mat-spinner>
+    <h3>Loading . . . Please Wait</h3>
+  </div>
+    
+  
 </div>
