--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -43,14 +43,59 @@
             <p matLine>
               <span> -- {{comment.author}} {{comment.date | date}}</span>
             </p>
-          </mat-list-item>
+          </mat-list-item>  
       </mat-list>
+
+      <mat-list *ngIf="commentForm.valid">
+          <mat-list-item>
+            <h4 matLine>{{commentForm.value.comment}}</h4>
+              <p matLine>
+                <span>{{commentForm.value.rating}} Stars</span> 
+              </p>
+              <p matLine>
+                <span> -- {{commentForm.value.author}} </span>
+              </p>
+          </mat-list-item>  
+      </mat-list>
+      
+      <form novalidate [formGroup]="commentForm" #cform="ngForm" (ngSubmit)="onSubmit()">
+        <p>
+          <mat-form-field class="full-width">
+            <input matInput formControlName="author" placeholder="Name" type="text">
+            <mat-error *ngIf="formErrors.author">
+              {{ formErrors.author }}
+            </mat-error>
+          </mat-form-field>
+        </p>
+        <p>
+          <mat-slider formControlName="rating" thumbLabel tickInterval="1" min="1" max="5"></mat-slider>
+        </p>
+        <p>
+          <mat-form-field class="full-width">
+            <textarea matInput formControlName="comment" placeholder="Your Comment" rows=12>
+              
+            </textarea>
+            <mat-error *ngIf="formErrors.comment">
+              {{ formErrors.comment }}
+            </mat-error>
+          </mat-form-field>
+        </p>
+        <button type="submit" mat-button class="background-primary text-floral-white"
+        [disabled]="commentForm.invalid">
+          Submit
+        </button>
+      </form>
+  
   </div>
+
+
 
   <div [hidden]="dish">
     <mat-spinner></mat-spinner>
     <h3>Loading . . . Please Wait</h3>
   </div>
-    
+  
+  
+  
   
 </div>
