--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,7 +6,7 @@
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
 
-  <div fxFlex="40" *ngIf="dish">
+  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
       <mat-card>
           <mat-card-header>
             <mat-card-title>
@@ -32,9 +32,9 @@
       </mat-card>
   </div>
 
-  <div fxFlex="40" *ngIf="dish">
+  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
       <mat-list>    
-        <h2 matLine> Comments </h2>
+        <h3>Comments</h3>
         <mat-list-item *ngFor="let comment of dish.comments">
            <h4 matLine>{{comment.comment}}</h4>
             <p matLine>
