--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -35,7 +35,7 @@
       </div>
     </div>
   </div>
-  <div fxFlex fxFlexOffset="20px" class="form-size" [hidden]="feedback || submitClicked">
+  <div fxFlex fxFlexOffset="20px" class="form-size" [hidden]="feedback || submitClicked"  [@expand]>
     <h3>Send us your Feedback</h3>
     <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()">
       <p>
